# workman

./: CLAUDE.md  README.md  pyproject.toml
src/workman/: cleanup.py  cli.py  config.py  deps.py  docker.py  git.py  gitignore.py  init.py  migrate.py
tests/: test_config.py  test_deps.py  test_migrate.py
